--- a/SportsStore-MVC/Views/Home/Index.cshtml
+++ b/SportsStore-MVC/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IQueryable<Product>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    @foreach(var product in Model?? Enumerable.Empty<Product>())
+    {
+        <div>
+            <h3>@product.Name</h3>
+            @product.Description
+            <h4>@product.Price.ToString("c")</h4>
+        </div>
+    }
