adding pagination and pagination tag helpr

--- a/SportsStore-MVC/Views/Home/Index.cshtml
+++ b/SportsStore-MVC/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@model IQueryable<Product>
+﻿@model ProductListViewModel
 
-    @foreach(var product in Model?? Enumerable.Empty<Product>())
+    @foreach(var product in Model.Products?? Enumerable.Empty<Product>())
     {
         <div>
             <h3>@product.Name</h3>
@@ -8,3 +8,4 @@
             <h4>@product.Price.ToString("c")</h4>
         </div>
     }
+    <div page-model="@Model?.PagingInfo" page-action="Index"></div>
