--- a/SportsStore-MVC/Views/_ViewImports.cshtml
+++ b/SportsStore-MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using SportsStore_MVC
 @using SportsStore_MVC.Models
+@using SportsStore_MVC.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *,SportsStore-MVC
