--- a/SportsStore-MVC/Views/Home/Index.cshtml
+++ b/SportsStore-MVC/Views/Home/Index.cshtml
@@ -2,17 +2,7 @@
 
     @foreach(var product in Model.Products?? Enumerable.Empty<Product>())
     {
-        <div class="card card-outline-primary m-1 p-1">
-            <div class="bg-fadded p-1">
-                <h4>
-                    @product.Name
-                    <span class="badge rounded-pill bg-primary text-white" style="float:right">
-                        <small>@product.Price.ToString("c")</small>
-                    </span>
-                </h4>
-            </div>
-            <div class="card-text p-1">@product.Description</div>
-        </div>
+        <partial name="ProductSummary" model="product" />
     }
     <div page-model="@Model?.PagingInfo" page-action="Index" page-classes-enabled="true" 
         page-class="btn" page-class-normal="btn-outline-dark"
