--- a/SportsStore-MVC/Pages/Cart.cshtml
+++ b/SportsStore-MVC/Pages/Cart.cshtml
@@ -8,6 +8,7 @@
             <th>Item</th>
             <th class="text-right">Price</th>
             <th class="text-right">Subtotal</th>
+            <th></th>
        </tr>
     </thead>
     <tbody>
@@ -18,6 +19,13 @@
         <td class="text-left">@line.Product.Name</td>
         <td class="text-right">@line.Product.Price.ToString("C")</td>
         <td class="text-right">@((line.Quantity * line.Product.Price).ToString("c"))</td>
+        <td class="text-center">
+            <form asp-page-handler="Remove" method="post">
+                <input type="hidden" name="ProductId" value="@line.Product.ProductId" />
+                <input type="hidden" name="returnUrl" value="@Model?.ReturnUrl" />
+                <button type="submit" class="btn btn-danger btn-sm">Remove</button>
+            </form>
+        </td>
         </tr>
         }
     </tbody>
