Adding delete button and functionality

--- a/SportsStore-MVC/Pages/Admin/Editor.razor
+++ b/SportsStore-MVC/Pages/Admin/Editor.razor
@@ -70,6 +70,6 @@
         }
         NavManager?.NavigateTo("/admin/products");
     }
-    public string ThemeColor => Id == 0 ? "Primary" : "warning";
+    public string ThemeColor => Id == 0 ? "primary" : "warning";
     public string TitleText => Id == 0 ? "Create" : "Edit";
 }
