--- a/SportsStore-MVC/Pages/Admin/Products.razor
+++ b/SportsStore-MVC/Pages/Admin/Products.razor
@@ -31,6 +31,9 @@
                                  href="@GetEditUrl(product.ProductId)">
                             Edit
                         </NavLink>
+                        <button class="btn btn-danger btn-sm" @onclick="@(e=>DeleteProduct(product))">
+                            Delete
+                        </button>
                     </td>
                 </tr>
             }
@@ -54,6 +57,11 @@
     public async Task UpdateData()
     {
         ProductData = await Repository.Products.ToListAsync();
+    }
+    public async Task DeleteProduct(Product product)
+    {
+        Repository.DeleteProduct(product);
+        await UpdateData();
     }
     public string GetDetailsUrl(long id) => $"/admin/products/details/{id}";
     public string GetEditUrl(long id) => $"/admin/products/edit/{id}";
