--- a/SportsStore-MVC/Pages/Admin/AdminLayout.razor
+++ b/SportsStore-MVC/Pages/Admin/AdminLayout.razor
@@ -1,6 +1,15 @@
 ﻿@inherits LayoutComponentBase
 <div class="bg-info text-white p-2">
-    <span class="navbar-brand ml-2">SPORTS STORE Admistration</span>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <span class="navbar-brand ml-2">SPORTS STORE Admistration</span>
+             </div>
+             <div class="col-2 text-right">
+                 <a class="btn btn-primary btn-sm" href="/account/logout">Log Out</a>
+             </div>
+        </div>
+    </div>
 </div>
 <div class="container-fluid">
     <div class="row p-2">
