--- a/SportsStore-MVC/Pages/Admin/IdentityUsers.cshtml
+++ b/SportsStore-MVC/Pages/Admin/IdentityUsers.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model IdentityUsersModel
 @using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Authorization
 
 <h3 class="bg-primary text-white text-center p-2">Admin User</h3>
 <table class="table table-sm table-striped table-bordered">
@@ -12,12 +13,12 @@
 </table>
 
 @functions{
+    [Authorize]
     public class IdentityUsersModel:PageModel{
         private UserManager<IdentityUser> userManager;
         public IdentityUsersModel(UserManager<IdentityUser> mng)
         {
             userManager = mng;
-            OnGetAsync();
         }
         public IdentityUser AdminUser { get; set; } 
         public async Task OnGetAsync(){
